# template_fastapi

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  env.local  pyproject.toml
app/: database.py  main.py  settings.py
app/api/: metric.py
app/crud/: base.py  metric.py
app/logic/: metric.py
app/models/: metric.py
app/schemas/: metric.py
migrations/: env.py
migrations/versions/: 6111b3f7987a_init.py  f735bf70adb5_init.py
tests/: conftest.py  test_metric.py
tests/factories/: metrics.py
