[tool.poetry]
name = "metrics_service"
version = "0.1.0"
description = ""
authors = ["Minkin Stepan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
sqlalchemy = "^2.0.19"
pydantic = "^2.1.1"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.1"
pydantic-settings = "^2.0.2"
asyncpg = "^0.28.0"
asyncio = "^3.4.3"
greenlet = "^2.0.2"
httpx = "^0.24.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
